objects/AW_FeatureSwitches__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A Hierarchical Custom setting that can be used by developers to switch off features (i.e. disable code, validation rules etc)</description>
    <fields>
        <fullName>AW_AdviserTargetsOn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This feature switch will toggle on or off code that manages Adviser Target and Performance objects</description>
        <label>Adviser Targets On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Create_Community_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate whether a community user should be created or not</description>
        <label>Create Community User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_DisableAccountAPICall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field related to disabling or enabling an account API call in a system</description>
        <label>Disable Account API Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_DisableAccountValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the checkbox is checked, it indicates that the account validation rules should be disabled.</description>
        <label>Disable Account Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_DisableAdviserPerformanceValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox field is checked, it indicates that the system should bypass or ignore the validation rules related to adviser performance</description>
        <label>Disable Adviser Performance Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_DisableAdviserTargetValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is enabled or checked, it indicates that the adviser target validation rule should be disabled</description>
        <label>Disable Adviser Target Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_DisableAllAPICalls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the checkbox is checked, it indicates that all API calls within the system should be disabled</description>
        <label>Disable All API Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_DoNotAuthenticateWithAzureB2C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This switch will ensure that a user who has a FederationId is not redirected to Authenticate with Azure B2C</description>
        <label>Do Not Authenticate With Azure B2C</label>
        <type>Checkbox</type>
    </fields>
    <label>Feature Switches</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>AW_AdviserTargetsOn__c</columns>
        <columns>AW_DisableAccountAPICall__c</columns>
        <columns>AW_DisableAccountValidationRules__c</columns>
        <columns>AW_DisableAdviserPerformanceValidation__c</columns>
        <columns>AW_DisableAdviserTargetValidationRule__c</columns>
        <columns>AW_DisableAllAPICalls__c</columns>
        <columns>AW_DoNotAuthenticateWithAzureB2C__c</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>